feat(corebank): add account order history internal api
